--- a/style.css
+++ b/style.css
@@ -5,13 +5,15 @@ body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: hsl(34, 78%, 91%);
 }
 header{
   height: 100vh;
   width: auto;
   background-image: url(./hero.jpg);
-  background-size: contain;
+  background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   text-align: center;
   display: grid;
   place-items: center;
@@ -20,4 +22,29 @@ header{
 h1{
   font-size: 60px;
   color: wheat;
+}
+.recipe-links{
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+
+}
+.recipe-links>p{
+  font-family: 'Abril Fatface', cursive;
+  font-size: 30px;
+}
+img{
+  width: 100%;
+}
+.links-container{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+div{
+  width: 400px;
+  height: 400px;
+  margin-inline-end: 10px;
+
 }
